--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <netty.version>4.1.91.Final</netty.version>
         <lombok.version>1.18.12</lombok.version>
+        <redisson.version>3.20.1</redisson.version>
     </properties>
 
     <packaging>pom</packaging>
@@ -33,6 +34,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson  -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
 
     </dependencies>
