--- a/netty-personal-protocol/pom.xml
+++ b/netty-personal-protocol/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>common-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
