--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <netty.version>4.1.91.Final</netty.version>
         <lombok.version>1.18.12</lombok.version>
         <redisson.version>3.20.1</redisson.version>
+        <fastjson.version>2.0.31</fastjson.version>
     </properties>
 
     <packaging>pom</packaging>
@@ -41,6 +42,13 @@
             <artifactId>redisson</artifactId>
             <version>${redisson.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
 
     </dependencies>
 </project>
